--- a/src/pages/tradingview/tradingview.scss
+++ b/src/pages/tradingview/tradingview.scss
@@ -1,6 +1,6 @@
 .tradingview-container {
     width: 100%;
-    height: calc(100vh - 56px);
+    height: 100vh;
     display: flex;
     flex-direction: column;
     background: #090d16;
@@ -8,6 +8,8 @@
     position: relative;
     overflow: hidden;
     font-family: 'Inter', system-ui, -apple-system, sans-serif;
+    margin: 0;
+    padding: 0;
 
     &__toolbar {
         display: flex;
